# AdvancedProgramming_MazeSolver

./: README.md  main_update.ipynb
HW1/: CMakeLists.txt  FileHandler.cpp  FileHandler.h  GameManager.cpp  GameManager.h  Maze.cpp  Maze.h  Parser.cpp  Parser.h  ParserErrorHandler.cpp  ParserErrorHandler.h  Player.cpp  Player.h  main.cpp  makefile
HW1/test_script/: test.py
HW1/test_script/expected_output/: TEST2_FAIL_BadChar.out
HW1/tests/: GoodMazeWithNoSol.txt  MorePlayersNoExit.txt  No_Player.txt  Row_Issue.txt  output_to_screen.txt  simple_maze_1.in  simple_maze_2.in  simple_test_1.out  temp.out  test5.txt
HW2/: CMakeLists.txt  FileHandler.cpp  FileHandler.h  GameManager.cpp  GameManager.h  MatchManager.cpp  MatchManager.h  Maze.cpp  Maze.h  MazeFileParser.cpp  MazeFileParser.h  ParserErrorHandler.h  TAlgorithm.cpp  TAlgorithm.h  main.cpp  makefile  match  tmpmf
HW2/Algorithms/: FirstAlgorithm.h  SecondAlgorithm.cpp  SecondAlgorithm.h  makefile
HW2/mazes/: maze3.maze
HW2/test_script/expected_output/: TEST1_FAIL_Cols_Issue.out
HW2/test_script/input/: TEST1_FAIL_Cols_Issue.in  TEST2_FAIL_BadChar - Copy.in
HW3/: AbstractAlgorithm.h  AlgorithmRegistration.cpp  AlgorithmRegistration.h  CMakeLists.txt  FileHandler.cpp  FileHandler.h  GameManager.cpp  GameManager.h  MatchManager.cpp  MatchManager.h  MazeFileParser.cpp  MazeFileParser.h  main.cpp  makefile
HW3/Algorithms/: FirstAlgorithm.cpp  FirstAlgorithm.h  FirstSmartAlgorithm.cpp  FirstSmartAlgorithm.h  SecondSmartAlgorithm.cpp  SecondSmartAlgorithm.h  makefile
HW3/test_script/input/: TEST2_FAIL_BadChar.in
HW4/Common/: Match.cpp  Match.h
HW4/MazeGame/: AbstractAlgorithm.h  CMakeLists.txt  FileHandler.cpp  FirstSmartAlgorithm.cpp  FirstSmartAlgorithm.h  GameData.cpp  GameData.h  GameInst.cpp  GameInst.h  GameManager.cpp  GameManager.h  GameManagerTmp.cpp  GameManagerTmp.h  MatchManager.h  Maze.cpp  Maze.h  MazeFileParser.cpp  MazeFileParser.h  Player.cpp  Player.h  Results.cpp  Results.h  SecondSmartAlgorithm.cpp  SecondSmartAlgorithm.h  example1.sh  main.cpp  makefile  mazeGame  readme.txt
HW4/Multithreading/: CMakeLists.txt  GameData.cpp  GameManager.cpp  GameManager.h  Match.h  Player.cpp  RandomMovementAlgorithm.cpp  RandomMovementAlgorithm.h  example1.sh  main.cpp  makefile  readme.txt
HW4/SimpleGame/: AStarAlgorithm.cpp  AStarAlgorithm.h  Algorithm.cpp  Algorithm.h  Bonus.txt  CMakeLists.txt  GameData.h  Player.h  main.cpp  makefile
